# tcp-ip-connection

./: README.md
C++/image server/: CMakeLists.txt  k4a_camera.cpp  k4a_camera.hpp  main.cpp  server.cpp  server.h
C++/image server/cmake/: FindK4A.cmake
C++/test client/: CMakeLists.txt  client.cpp  client.hpp  main.cpp
C++/test client/cmake/: targets.cmake
C++/test server/: CMakeLists.txt  main.cpp  server.cpp  server.h
python/: client.py  server.py
